# selenium_saucedemo_ui_tests

./: README.md  conftest.py  pyproject.toml  requirements.txt
.circleci/: config.yml
common/: constants.py
pages/application/: application.py
pages/login_page/: login_page.py
tests/auth/: test_auth.py
