[tool.poetry]
name = "selenium_saucedemo_ui_autotests"
version = "0.1.0"
description = ""
authors = ["Twilighters <ilya475@rambler.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.0"
pytest = "^6.2.5"
webdriver-manager = "^3.5.2"
Faker = "^12.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
